<resources>
    <string name="app_name">s172589 s186571</string>

    <!--Meny-->
    <string name="leggTilKnapp">Legg til</string>
    <string name="Meldingsknapp">Endre melding</string>
    <string name="Settings">Settings</string>

    <!--LeggTilNy-->
    <string name="Navn">Navn:</string>
    <string name="tlf">Telefon:</string>
    <string name="bursdag">Fødselsdag:</string>
    <string name="akseptDesc">Aksepter valg</string>
    <string name="avbrytDesc">Avbryt valg</string>

    <!--Meldingsvindu-->
    <string name="meldInfo">Melding som sendes når en kontakt har bursdag:</string>
    <string name="ingen_kontakt">Ingen å gratulere idag!</string>
    <string name="grat_noti_start">Gratulasjonsmelding ble sendt til:</string>
    <string name="grat_noti_slutt">Hipp hipp hurra!</string>
    <string name="melding_ikke_sendt">Tom melding! Lag en melding å sende!</string>
    <string name="melding_sendt">Melding allerede sendt! Bare en melding per dag!</string>
    <string name="lagt_til_tid_bak">Neste melding vil kjøres imorgen på gitt tidspunkt!</string>

    <!--Settings-->
    <string name="timestamp">Tidspunkt for gratulasjon</string>
    <string name="autoMeld">Automatisk melding</string>
    <string name="IngenBurs">Ingen bursdagsbarn</string>
    <string name="tidsvelger">Innstillinger</string>
    <string name="melding">Melding</string>
    <string name="cptest">Test content provider</string>
    <string name="leggTil">Legg til</string>

    <!-- Validering -->
    <string name="alle_felter">Ingen av feltene ble fylt ut!</string>
    <string name="tomt_navn">Skriv inn et navn!</string>
    <string name="tom_telefon">Skriv inn telefonnummer!</string>
    <string name="tom_dato">Velg en dato!</string>
    <string name="tom_melding">Meldingen må ikke være tom!</string>
    <string name="lengde_telefon">Telefonnummeret må være 8 tall langt!</string>
    <string name="finnes_allerede">Det finnes allerede en person med telefonnummer: </string>

</resources>
