<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:background="#e2ccd675"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Navn"
        android:textSize="25dp"
        android:textColor="#666"/>
    <EditText
        android:id="@+id/navn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:background="#edfd9f" />
    <TextView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tlf"
        android:textSize="25dp"
        android:textColor="#666"/>
    <EditText
        android:id="@+id/telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:background="#edfd9f"
        android:inputType="phone"/>
    <TextView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bursdag"
        android:textSize="25dp"
        android:textColor="#666"/>
    <EditText
        android:id="@+id/dato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:editable="false"
        android:inputType="none"
        android:clickable="true"
        android:background="#edfd9f" />

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_weight="0.5" >

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_check_circle_grey_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lagreK"
            android:layout_row="2"
            android:layout_column="1"
            android:background="#0000"
            android:contentDescription="@string/akseptDesc"
            android:layout_gravity="center_horizontal|right" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cptest"
            android:id="@+id/cptest"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="#7e8bff"
            android:textColor="#ffffff"
            android:padding="6dp" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cancel_grey_36dp"
            android:layout_height="wrap_content"
            android:id="@+id/avbrytK"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#0000"
            android:contentDescription="@string/avbrytDesc"
            android:layout_gravity="left|center_horizontal" />
    </GridLayout>

</LinearLayout>